# battery-monitor

./: Cargo.toml  README.md  install.sh
env/: env
src/: battery_manager.rs  main.rs
systemd/: battery-monitor.service
